# geekmagic-stats

./: .gitignore  Cargo.toml  README.md
src/: ci.rs  ci_bin.rs  config.rs  disk_render.rs  draw.rs  git.rs  lib.rs  main.rs  pr.rs  render.rs  rotate.rs  stats.rs  sys.rs  sysinfo.rs  upload.rs  usage.rs  usage_bin.rs
