[package]
name = "geekmagic-stats"
version = "0.1.0"
edition = "2021"
description = "Push Claude Code usage, CI, and system stats to GeekMagic SmallTV displays"
license = "MIT"
repository = "https://github.com/jimmystridh/geekmagic-stats"
homepage = "https://github.com/jimmystridh/geekmagic-stats"
documentation = "https://docs.rs/geekmagic-stats"
readme = "README.md"

[dependencies]
anyhow = "1.0"
image = "0.25"
imageproc = "0.26"
ab_glyph = "0.2"
reqwest = { version = "0.13", features = ["blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
toml = "1"

[lib]
name = "geekmagic_common"
path = "src/lib.rs"

[[bin]]
name = "geekmagic-stats"
path = "src/main.rs"

[[bin]]
name = "geekmagic-git"
path = "src/git.rs"

[[bin]]
name = "geekmagic-sys"
path = "src/sys.rs"

[[bin]]
name = "geekmagic-ci"
path = "src/ci_bin.rs"

[[bin]]
name = "geekmagic-usage"
path = "src/usage_bin.rs"

[[bin]]
name = "geekmagic-all"
path = "src/rotate.rs"
